--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import loadConfig from '../configLoader';
 
 const config = await loadConfig();
 
-const { ticketUrl, headline, hasAnnouncedSpeakers } = config;
+const { ticketUrl, headline, hasCfs } = config;
 ---
 
 <section
@@ -30,7 +30,7 @@ const { ticketUrl, headline, hasAnnouncedSpeakers } = config;
         target="_blank"
         class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark">Get a Ticket</a>
       
-      {hasAnnouncedSpeakers ? (
+      {!hasCfs ? (
       <>
       <a href="#speakers"
         class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">View Speakers</a>
