--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -28,7 +28,7 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
         <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
         <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
       </p>      
-      {confConfig.hasAnnouncedSpeakers ? (
+      {!confConfig.hasCfs ? (
         <>
         <p class={`group hover:text-${accentColor} relative`}>
           <a href=`/#speakers` class="cursor-pointer transition">Speakers</a>
@@ -95,7 +95,7 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
     <nav class="flex flex-col space-y-4 px-4 py-4 font-bold font-sans text-md">
       <a href=`/` class={`hover:text-${accentColor} cursor-pointer transition`}>Home</a>
          
-      {confConfig.hasAnnouncedSpeakers ? (
+      {!confConfig.hasCfs ? (
         <>
         <a href=`/#speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Speakers</a>
         <a href=`/#schedule` class={`hover:text-${accentColor} cursor-pointer transition`}>Schedule</a>
