--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -30,16 +30,18 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
       </p>      
       {!confConfig.hasCfs ? (
         <>
+        {confConfig.hasAnnouncedSpeakers ? (
         <p class={`group hover:text-${accentColor} relative`}>
           <a href=`/#speakers` class="cursor-pointer transition">Speakers</a>
           <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
           <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
-        </p>      
+        </p> ) : <></> }
+        {confConfig.hasAnnouncedSchedule ? (
         <p class={`group hover:text-${accentColor} relative`}>
           <a href=`/#schedule` class="cursor-pointer transition">Schedule</a>
           <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
           <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
-        </p>
+        </p> ) : <></> }
         </>
       ) : (        
         <p class={`group hover:text-${accentColor} relative`}>
@@ -97,8 +99,8 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
          
       {!confConfig.hasCfs ? (
         <>
-        <a href=`/#speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Speakers</a>
-        <a href=`/#schedule` class={`hover:text-${accentColor} cursor-pointer transition`}>Schedule</a>
+        {confConfig.hasAnnouncedSpeakers ? (<a href=`/#speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Speakers</a>) : <></> }
+        {confConfig.hasAnnouncedSchedule ? (<a href=`/#schedule` class={`hover:text-${accentColor} cursor-pointer transition`}>Schedule</a>) : <></> }
         </>
       ) : (  
         <a href=`/#call-for-speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Call for Speakers</a>
