--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -32,8 +32,10 @@ const { ticketUrl, headline, hasCfs } = config;
       
       {!hasCfs ? (
       <>
-      <a href="#speakers"
-        class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">View Speakers</a>
+       {config.hasAnnouncedSpeakers ? (     
+        <a href="#speakers"
+          class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">View Speakers</a>
+       ) : <></> }
       </>
       ) : ( 
       <>
