--- a/src/components/schedule-js.astro
+++ b/src/components/schedule-js.astro
@@ -15,4 +15,4 @@ const config = await loadConfig();
       <div id="custom-schedule" data-sessionize-id=`${config.sessionizeId}`></div>
     </div>  
 </section>
-<script src="/js/custom-schedule.js" defer></script>
+<script src=`${config.SITE_ROOT}/js/custom-schedule.js` defer></script>
