--- a/src/components/speakers-js.astro
+++ b/src/components/speakers-js.astro
@@ -15,4 +15,4 @@ const config = await loadConfig();
       <div id="custom-speakers" data-sessionize-id=`${config.sessionizeId}`></div>
     </div>  
 </section>  
-<script src="/js/custom-speakers.js" defer></script>
+<script src=`${config.SITE_ROOT}/js/custom-speakers.js` defer></script>
