Updates code of conduct
- Adds recruiters messaging
- Adds extra detail about steps taken in worst case
- Adds that organising team will be highlighted at event start

--- a/src/pages/code-of-conduct.astro
+++ b/src/pages/code-of-conduct.astro
@@ -78,6 +78,10 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
             a professional setting
           </li>
         </ul>
+        <p>Recruiters are welcome to attend MAUI Day, but please be aware that we will
+        be monitoring the event for any unsolicited recruitment activity and reserve the right to request they leave. 
+        Recruiters are expected to make meaningful connections with other attendees, contribute to the community during the 
+        event, and follow up afterwards.</p>
         <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
           Enforcement Responsibilities
         </h2>
@@ -109,7 +113,9 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
         <p class="mt-4">
           Instances of abusive, harassing, or otherwise unacceptable behavior
           may be reported to the community leaders responsible for enforcement
-          at <span set:html={codeOfConductMain}></span>.
+          at <span set:html={codeOfConductMain}></span>. At the start of the event,
+          the organising team will be highlighted to the attendees. You can approach any of the
+          team members if you feel uncomfortable or if you experience any issues.
         </p>
         <p class="mt-4">
           If, for whatever reason, you prefer another contact, feel free to
@@ -117,7 +123,9 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
           up with the people in question.
         </p>
         <p class="mt-4">
-          All complaints will be reviewed and investigated promptly and fairly.
+          All complaints will be reviewed and investigated promptly and fairly. If required,
+          a member of the organising team will escort you from the venue, ensure that 
+          you have a safe ride home, and contact the police.
         </p>
         <p class="mt-4">
           All community leaders are obligated to respect the privacy and
