Adds speaker lineup subject to change

--- a/src/components/speakers.astro
+++ b/src/components/speakers.astro
@@ -54,6 +54,9 @@ try {
           ))}
         </div>
       )}
+      <p class="text-white text-base text-md mb-12">
+        Speaker lineup is subject to change.
+      </p>
     </div>
   </section>
   
