--- a/src/pages/diversity-statement.astro
+++ b/src/pages/diversity-statement.astro
@@ -15,7 +15,7 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
           A Statement on Diversity, Equity, and Inclusion
         </h1>
         <p class="mt-4">
-          We need to acknowledge a clear issue—the lack of diversity in our speaker lineup. Despite our efforts to assemble a broad range of voices, we fell short, and our lineup isn't a a true representation of the makeup of our community. We tried multiple channels in order to widen the net of submissions and give opportunity to all but we did not succeed in our attempts. As this is the first iteration of this event, the speaker pool taking avaiability and clashes with other events into consideration was smaller than we would have liked, but that is not an excuse. We are committed to improving, and we are taking concrete steps to ensure future events reflect a more diverse and representative lineup.
+          We need to acknowledge a clear issue—the lack of diversity in our speaker lineup. Despite our efforts to assemble a broad range of voices, we fell short, and our lineup isn't a true representation of the makeup of our community. We tried multiple channels in order to widen the net of submissions and give opportunity to all but we did not succeed in our attempts. As this is the first iteration of this event, the speaker pool taking availability and clashes with other events into consideration was smaller than we would have liked, but that is not an excuse. We are committed to improving, and we are taking concrete steps to ensure future events reflect a more diverse and representative lineup.
         </p>
         <br/>
         <h2 class="text-3xl mb-8 text-brand-dark font-bold">What are we doing about it?</h2>
