Updates diversity statement

--- a/src/pages/diversity-statement.astro
+++ b/src/pages/diversity-statement.astro
@@ -14,20 +14,33 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
         <h1 class="text-4xl mb-8 text-brand-dark font-bold">
           A Statement on Diversity, Equity, and Inclusion
         </h1>
-        <p class="mt-4">
-          We need to acknowledge a clear issue—the lack of diversity in our speaker lineup. Despite our efforts to assemble a broad range of voices, we fell short, and our lineup isn't a true representation of the makeup of our community. We tried multiple channels in order to widen the net of submissions and give opportunity to all but we did not succeed in our attempts. As this is the first iteration of this event, the speaker pool taking availability and clashes with other events into consideration was smaller than we would have liked, but that is not an excuse. We are committed to improving, and we are taking concrete steps to ensure future events reflect a more diverse and representative lineup.
-        </p>
+        <p class="mt-4">We screwed up. We'll do better next time.</p>
+
+        <p class="mt-4">We need to acknowledge a clear issue—the lack of diversity in our speaker lineup. Despite our efforts to assemble a broad range of voices, we fell short. Whilst we're proud to have each and everyone of our speaks join us in London, and appreciate them all for giving up their time to speak at our event at their own cost, our lineup isn't a true representation of the makeup of our community.</p>
+
+        <p class="mt-4">We tried multiple channels in order to widen the net of submissions and give opportunity to all but we did not succeed in our attempts. As this is the first iteration of the UK outing for MAUI Day, and taking availability and clashes with other events into consideration, the speaker pool was smaller than we would have liked. Not being able to offer any speaker support package due to funding had more of an impact than we'd expected.</p>
+
+        <p class="mt-4">But that is not an excuse.</p>
+
+        <p class="mt-4">We are committed to improving. and we are taking concrete steps to ensure future events reflect a more diverse and representative lineup. We are committed to creating a .NET MAUI focused conference in the UK that uplifts others, and supports them to go onto bigger things. We are committed to making sure that you feel represented.</p>
+
+        <p class="mt-4">If we can't do this at future outings, they likely won't happen.</p>
         <br/>
+
         <h2 class="text-3xl mb-8 text-brand-dark font-bold">What are we doing about it?</h2>
         <p class="mt-4">
-          Every setback is an opportunity to learn. We now have greater awareness of additional networks, contacts, and strategies to expand our reach and create more opportunities for underrepresented voices. We also recognize that timing plays a crucial role—giving potential speakers enough notice is essential for ensuring they can participate. These factors will be a core focus as we plan future events.
+          Every setback is an opportunity to learn.
         </p>
-        <p class="mt-4">
-          While this year’s lineup does not reflect the diversity we had hoped for, it has reinforced our commitment to change. Representation is vital, and we are dedicated to making tangible improvements in how we recruit and support speakers. We plan to reach out to potential speakers sooner, but also reaching out to communities and meetups to encourage new speakers to take a step up and submit conference talks at ours and other events. We will of course be open to suggestions and feedback from our community on how we can improve for future events.
-        </p>
-        <p class="mt-4">
-         Thank you!
-        </p>
+        <p class="mt-4">We now have greater awareness of additional networks, contacts, and strategies to expand our reach and create more opportunities for more voices. We also recognize that timing plays a crucial role—giving potential speakers enough notice is essential for ensuring they can participate.</p>
+
+        <p class="mt-4">These factors will be a core focus as we plan future events.</p>
+
+        <p class="mt-4">While this year’s UK lineup does not reflect the diversity we had hoped for, it has reinforced our commitment to change. Representation is vital, and we are dedicated to making tangible improvements in how we recruit and support speakers.</p>
+
+        <p class="mt-4">We plan to reach out to potential speakers sooner, but also reaching out to communities and meetups to encourage new speakers to take a step up and submit conference talks at ours and other events. We will of course be open to suggestions and feedback from our community on how we can improve in the years to come.</p>
+
+        <p class="mt-4">Thank you!</p>
+        
       </div>
     </div>
   </section>
