Make's free not the most important thing

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -20,8 +20,9 @@ const { ticketUrl, headline, hasCfs } = config;
       The Conference with a Focus on .NET MAUI 🏝️
     </h1>
     <p class="text-white text-lg mt-6 mb-12">
-      .NET MAUI day is a one-day, free, event filled with sessions that have to
-      do with cross-platform development using, you guessed it, .NET MAUI. Speakers from all around the world will be there to present about the
+      .NET MAUI day is a one-day, in-person event filled with sessions that have to
+      do with cross-platform development using, you guessed it, .NET MAUI. Its also free! Speakers 
+      from all around the world will be there to present about the
       latest and greatest in the .NET MAUI ecosystem, as well as being in the
       “hallway track” so you can talk to them, discuss and ask questions.
     </p>
