--- a/src/pages/diversity-statement.astro
+++ b/src/pages/diversity-statement.astro
@@ -22,7 +22,7 @@ const { codeOfConductMain, codeOfConductSecondary } = config;
 
         <p class="mt-4">But that is not an excuse.</p>
 
-        <p class="mt-4">We are committed to improving. and we are taking concrete steps to ensure future events reflect a more diverse and representative lineup. We are committed to creating a .NET MAUI focused conference in the UK that uplifts others, and supports them to go onto bigger things. We are committed to making sure that you feel represented.</p>
+        <p class="mt-4">We are committed to improving. We are taking concrete steps to ensure future events reflect a more diverse and representative lineup. We are committed to creating a .NET MAUI focused conference in the UK that uplifts others, and supports them to go onto bigger things. We are committed to making sure that you feel represented.</p>
 
         <p class="mt-4">If we can't do this at future outings, they likely won't happen.</p>
         <br/>
