wip waiting for signoff

--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -34,7 +34,7 @@ const regularSponsors = sponsors.filter(s => !s.boost);
           <img
             src={`/images/sponsors/${sponsor.logo}.png`}
             alt={sponsor.name}
-            class="w-3/4 sm:w-2/3 md:w-1/2 object-contain mb-4"
+            class="w-full object-contain mb-4"
           />
         </a>
       ))}
@@ -52,7 +52,7 @@ const regularSponsors = sponsors.filter(s => !s.boost);
           <img
             src={`/images/sponsors/${sponsor.logo}.png`}
             alt={sponsor.name}
-            class="w-2/3 sm:w-3/4 md:w-1/2 object-contain mb-4"
+            class="w-4/5 sm:w-full md:w-3/4 object-contain mb-4"
           />
         </a>
       ))}
