Introduce a fixed archive page

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -66,6 +66,11 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
         <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
         <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
       </p>
+      <p class={`group hover:text-${accentColor} relative`}>
+        <a href=`/past-events` class="cursor-pointer transition">Past Events</a>
+        <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
+        <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
+      </p>
     </nav>
 
     <!-- Social Icons -->
