Remove 2025 diversity statement

--- a/src/components/speakers-js.astro
+++ b/src/components/speakers-js.astro
@@ -10,7 +10,7 @@ const config = await loadConfig();
       <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">Our Awesome Line-Up</p>
       <h2 class="text-white text-4xl md:text-4xl uppercase font-header font-bold mb-4">The Speakers</h2>
       <p class="text-white text-base text-md mb-12">
-        Below are the speakers that will make this instance of .NET MAUI day unforgettable! Go watch their awesome sessions and connect with them afterwards in our "hallway track". Please also read our <a href="/diversity-statement" class="text-brand-extra">statement on speaker diversity</a> regarding the lineup of this year's event.
+        Below are the speakers that will make this instance of .NET MAUI day unforgettable! Go watch their awesome sessions and connect with them afterwards in our "hallway track".
       </p>
       <div id="custom-speakers" data-sessionize-id=`${config.sessionizeId}`></div>
     </div>  
