--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -27,6 +27,22 @@ import { config } from "../../mauiday.config.mjs";
       >
         <i class="fa-brands fa-github text-2xl"></i>
       </a>
+      <a
+        href={config.LINKEDIN_LINK}
+        target="_blank"
+        aria-label="LinkedIn"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-linkedin text-2xl"></i>
+      </a>
+      <a
+        href={config.FLICKR_LINK}
+        target="_blank"
+        aria-label="Flickr"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-flickr text-2xl"></i>
+      </a>
     </div>
   </div>
 </footer>
