Adds showing speakers before the full lineup is announced

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,14 +15,9 @@ const config = await loadConfig();
 <Layout>
 	<Hero />
 	<About />
-	{!config.hasCfs ? (
-		<>
-		  {config.hasAnnouncedSpeakers ? ( <Speakers /> ) : <></>}
-		  {config.hasAnnouncedSchedule ? ( <Schedule /> ) : <></>}
-		</>
-	  ) : (
-	  	<CFS />
-	  )}
+	{config.hasCfs ? ( <CFS /> ) : <></>}
+	{config.hasAnnouncedSpeakers ? ( <Speakers /> ) : <></>}
+	{config.hasAnnouncedSchedule ? ( <Schedule /> ) : <></>}
 	<Location />
 	<Sponsors />
 </Layout>
