--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -43,6 +43,14 @@ import { config } from "../../mauiday.config.mjs";
       >
         <i class="fa-brands fa-flickr text-2xl"></i>
       </a>
+      <a
+        href={config.INSTAGRAM_LINK}
+        target="_blank"
+        aria-label="Instagram"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-instagram text-2xl"></i>
+      </a>
     </div>
   </div>
 </footer>
