--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -72,17 +72,43 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
     <div class="hidden md:flex space-x-4">
       <a
         href={config.BLUESKY_LINK}
+        target="_blank"
         aria-label="BlueSky"
-        class={`hover:text-${accentColor} transition`}
+        class="text-gray-400 hover:text-white"
       >
-        <i class="fa-brands fa-bluesky"></i>
+        <i class="fa-brands fa-bluesky text-2xl"></i>
       </a>
       <a
         href={config.GITHUB_LINK}
+        target="_blank"
         aria-label="GitHub"
-        class={`hover:text-${accentColor} transition`}
+        class="text-gray-400 hover:text-white"
       >
-        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-github text-2xl"></i>
+      </a>
+      <a
+        href={config.LINKEDIN_LINK}
+        target="_blank"
+        aria-label="LinkedIn"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-linkedin text-2xl"></i>
+      </a>
+      <a
+        href={config.FLICKR_LINK}
+        target="_blank"
+        aria-label="Flickr"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-flickr text-2xl"></i>
+      </a>
+      <a
+        href={config.INSTAGRAM_LINK}
+        target="_blank"
+        aria-label="Instagram"
+        class="text-gray-400 hover:text-white"
+      >
+        <i class="fa-brands fa-instagram text-2xl"></i>
       </a>
     </div>
 
