--- a/src/components/schedule-js.astro
+++ b/src/components/schedule-js.astro
@@ -12,6 +12,7 @@ const config = await loadConfig();
       <p class="text-brand-dark text-base text-md mb-12">
         Check out our schedule below to plan your day and make the most of this event. See you there!
       </p>
+      <p>Doors open at 9am</p>
       <div id="custom-schedule" data-sessionize-id=`${config.sessionizeId}`></div>
     </div>  
 </section>
