--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -35,6 +35,7 @@ const regularSponsors = sponsors.filter(s => !s.boost);
             src={`/images/sponsors/${sponsor.logo}.png`}
             alt={sponsor.name}
             class="w-full object-contain mb-4"
+            loading="lazy"
           />
         </a>
       ))}
@@ -53,6 +54,7 @@ const regularSponsors = sponsors.filter(s => !s.boost);
             src={`/images/sponsors/${sponsor.logo}.png`}
             alt={sponsor.name}
             class="w-4/5 sm:w-full md:w-3/4 object-contain mb-4"
+            loading="lazy
           />
         </a>
       ))}
