Fix loading attribute formatting for sponsor images

--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -54,7 +54,7 @@ const regularSponsors = sponsors.filter(s => !s.boost);
             src={`/images/sponsors/${sponsor.logo}.png`}
             alt={sponsor.name}
             class="w-4/5 sm:w-full md:w-3/4 object-contain mb-4"
-            loading="lazy
+            loading="lazy"
           />
         </a>
       ))}
