--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import CFS from '../components/cfs.astro';
 import Sponsors from '../components/sponsors.astro';
 import Speakers from '../components/speakers-js.astro';
 import Schedule from '../components/schedule-js.astro';
+import Newsletter from '../components/newsletter.astro';
 import loadConfig from '../configLoader';
 
 const config = await loadConfig();
@@ -20,4 +21,5 @@ const config = await loadConfig();
 	{config.hasAnnouncedSchedule ? ( <Schedule /> ) : <></>}
 	<Location />
 	<Sponsors />
+	<Newsletter />
 </Layout>
