--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { siteMeta } from "../data/siteMeta";
 import MetaHead from "../components/metahead.astro";
 import Navigation from "../components/navigation.astro";
 import Footer from "../components/footer.astro";
+import "../styles/global.css";
 
 const {
   pageTitle = siteMeta.title, // Default to site title if no page title is provided
