--- a/src/pages/thank-you.astro
+++ b/src/pages/thank-you.astro
@@ -17,4 +17,14 @@ import Layout from "../layouts/Layout.astro";
       </p>
     </div>
   </section>
+  <section class="bg-brand-light py-24">
+    <div class="container max-w-4xl mx-auto px-4 text-center">
+      <a
+        href="/"
+        class="inline-block border-2 border-brand-extra bg-brand-extra text-white font-bold px-8 py-3 rounded-full text-md hover:bg-brand-extraDark hover:border-brand-extraDark transition"
+      >
+        Back to Home
+      </a>
+    </div>
+  </section>
 </Layout>
