--- a/src/components/newsletter.astro
+++ b/src/components/newsletter.astro
@@ -80,4 +80,4 @@
     </form>
   </div>
 </section>
-<script src="https://cdn.sendfox.com/js/form.js" charset="utf-8"></script>
+<script src="https://cdn.sendfox.com/js/form.js" charset="utf-8" defer></script>
