--- a/src/components/newsletter.astro
+++ b/src/components/newsletter.astro
@@ -70,6 +70,10 @@
         <input type="text" name="a_password" tabindex="-1" value="" autocomplete="off" />
       </div>
 
+      <div class="text-center">
+        <p class="text-sm text-gray-500 mb-4">The form is protected by <a href="/privacy" class="text-brand-extra hover:underline">reCAPTCHA</a>.</p>
+      </div>
+
     <div class="text-center">
         <button
         type="submit"
