--- a/src/components/newsletter.astro
+++ b/src/components/newsletter.astro
@@ -15,6 +15,7 @@
     <span class="text-brand-dark text-base text-md mb-10 italic">No spam. Ever.</span>
     </p>
 
+    <!-- User is redirected to the thank-you page automatically by sendfox after submitting the form -->
     <form
       method="post"
       action="https://sendfox.com/form/m79vql/m8lj22"
